@startuml Commandes - Clean Architecture

skinparam packageStyle rectangle
skinparam classBackgroundColor #FAFAFA
skinparam classBorderColor #555555
skinparam arrowColor #333333
skinparam packageBorderColor #888888

title Architecture Clean - Composant Commandes

package "api" #D6EAF8 {

    class PlatsUtilisateursApplication {
        +@ApplicationPath("/api")
        +@ApplicationScoped
        --
        +@Produces openCommandeDbConnection()
        +@Produces createMenuServiceClient()
    }

    class CommandeResource {
        +@Path("/commandes")
        --
        +getAllCommandes(abonneId)
        +getCommande(id)
        +createCommande(commande)
        +updateCommande(id, commande)
        +deleteCommande(id)
    }
}

package "usecases" #D5F5E3 {

    class CommandeService {
        -repo : CommandeRepositoryInterface
        -menuClient : MenuServiceClient
    }
}

package "domain" #FEF9E7 {

    class Commande {
        -id : int
        -abonneId : int
        -dateCommande : String
        -adresseLivraison : String
        -dateLivraison : String
        -prixTotal : double
        -lignes : List<LigneCommande>
    }

    class LigneCommande {
        -menuId : int
        -menuNom : String
        -quantite : int
        -prixUnitaire : double
        -prixLigne : double
    }

    Commande "1" *-- "1..*" LigneCommande
}

package "repositories" #F9EBEA {

    interface CommandeRepositoryInterface {
        +getAllCommandes(abonneId)
        +getCommandeById(id)
        +createCommande(commande)
        +updateCommande(id, adresse, date)
        +deleteCommande(id)
    }
}

package "infrastructure" #E8DAEF {

    class CommandeRepositoryMariadb {
        -dbConnection : Connection
    }

    class MenuServiceClient {
        -MENUS_API_URL : String
        --
        +fetchLigneCommande(menuId, quantite)
    }
}

package "API Menus (externe)" #FDEBD0 {
    class MenusAPI {
        GET /menus/{id}
        --
        port : 3004
    }
}

CommandeResource --> CommandeService
CommandeService --> CommandeRepositoryInterface
CommandeService --> MenuServiceClient

CommandeRepositoryInterface <|.. CommandeRepositoryMariadb

PlatsUtilisateursApplication ..> CommandeRepositoryMariadb : @Produces
PlatsUtilisateursApplication ..> MenuServiceClient : @Produces

MenuServiceClient --> MenusAPI : HTTP GET

@enduml
